--- a/PlataFormaDePagosWebApp/PlataFormaDePagosWebApp.csproj
+++ b/PlataFormaDePagosWebApp/PlataFormaDePagosWebApp.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Controllers\COMERCIOsController.cs" />
     <Compile Include="Controllers\CONFIGURACION_DE_COMERCIOController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\REPORTESMENSUALESController.cs" />
     <Compile Include="Controllers\SINPEsController.cs" />
     <Compile Include="Controllers\USUARIOsController.cs" />
     <Compile Include="Global.asax.cs">
@@ -159,7 +160,13 @@
       <DependentUpon>ModeloBanco.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="REPORTESMENSUALES.cs">
+      <DependentUpon>ModeloBanco.tt</DependentUpon>
+    </Compile>
     <Compile Include="SINPE.cs">
+      <DependentUpon>ModeloBanco.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagrams.cs">
       <DependentUpon>ModeloBanco.tt</DependentUpon>
     </Compile>
     <Compile Include="USUARIO.cs">
@@ -261,6 +268,11 @@
     <Content Include="Views\USUARIOs\Details.cshtml" />
     <Content Include="Views\USUARIOs\Edit.cshtml" />
     <Content Include="Views\USUARIOs\Index.cshtml" />
+    <Content Include="Views\REPORTESMENSUALES\Create.cshtml" />
+    <Content Include="Views\REPORTESMENSUALES\Delete.cshtml" />
+    <Content Include="Views\REPORTESMENSUALES\Details.cshtml" />
+    <Content Include="Views\REPORTESMENSUALES\Edit.cshtml" />
+    <Content Include="Views\REPORTESMENSUALES\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
