--- a/PlataFormaDePagosWebApp/PlataFormaDePagosWebApp.csproj
+++ b/PlataFormaDePagosWebApp/PlataFormaDePagosWebApp.csproj
@@ -166,6 +166,9 @@
     <Compile Include="SINPE.cs">
       <DependentUpon>ModeloBanco.tt</DependentUpon>
     </Compile>
+    <Compile Include="sysdiagrams.cs">
+      <DependentUpon>ModeloBanco.tt</DependentUpon>
+    </Compile>
     <Compile Include="USUARIO.cs">
       <DependentUpon>ModeloBanco.tt</DependentUpon>
     </Compile>
