--- a/PlataFormaDePagosWebApp/PlataFormaDePagosWebApp.csproj
+++ b/PlataFormaDePagosWebApp/PlataFormaDePagosWebApp.csproj
@@ -334,6 +334,7 @@
     <Content Include="Views\manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Error\Forbidden.cshtml" />
+    <Content Include="Views\Error\NotFound.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
